# ColorWall

./: .env  .env.example  .gitignore  Cargo.toml  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
dist-electron/: ipc-loader.js  ipc-loader.js.map  main.js  main.js.map  preload.js.map
dist-electron/services/: anime-wallpaper.service.js  anime-wallpaper.service.js.map  image-proxy.service.js  image-proxy.service.js.map  safebooru.service.js  safebooru.service.js.map  wallpaper.service.js  wallpaper.service.js.map
electron/: ipc-loader.ts  main.ts  preload.ts
electron/services/: anime-wallpaper.service.ts  image-proxy.service.ts  safebooru.service.ts  wallpaper.service.ts
src/: main.rs
src/app/: layout.tsx  page.tsx
src/spotify/: auth.rs  client.rs  models.rs
src/storage/: tokens.rs
src/transfer/: sync.rs
